# py-web-scraper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml
src/philiprehberger_web_scraper/: __init__.py
tests/: test_cache.py  test_extract_table.py  test_import.py  test_page.py  test_scraper.py
