[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-web-scraper"
version = "0.1.4"
description = "Lightweight web scraper with rate limiting and CSS selectors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
dependencies = ["requests>=2.28", "beautifulsoup4>=4.12"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-web-scraper#readme"
Repository = "https://github.com/philiprehberger/py-web-scraper"
Issues = "https://github.com/philiprehberger/py-web-scraper/issues"
Changelog = "https://github.com/philiprehberger/py-web-scraper/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_web_scraper"]
