[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-web-scraper"
version = "0.1.7"
description = "Lightweight web scraper with rate limiting and CSS selectors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["scraper", "web", "html", "extraction", "crawler"]
dependencies = ["requests>=2.28", "beautifulsoup4>=4.12"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-web-scraper#readme"
Repository = "https://github.com/philiprehberger/py-web-scraper"
Issues = "https://github.com/philiprehberger/py-web-scraper/issues"
Changelog = "https://github.com/philiprehberger/py-web-scraper/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_web_scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
